--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http-server",
-  "version": "0.6.1-nocache4real",
+  "version": "0.6.1-nocache4real.2",
   "author": "Nodejitsu <support@nodejitsu.com>",
   "description": "a simple zero-configuration command-line http server",
   "main": "./lib/http-server",
@@ -53,13 +53,18 @@
     "colors": "0.6.x",
     "optimist": "0.5.x",
     "union": "0.3.x",
-    "ecstatic": "git://github.com/diegovilar/node-ecstatic.git",
+    "ecstatic": "https://github.com/diegovilar/node-ecstatic/releases/download/v0.5.3-nocache4real.2/ecstatic-0.5.3-nocache4real.2.tgz",
     "portfinder": "0.2.x",
     "opener": "~1.3.0"
   },
   "devDependencies": {
     "vows": "0.7.x",
-    "request": "2.21.x"
+    "request": "2.21.x",
+      "grunt": "~0.4.5",
+      "load-grunt-tasks": "~0.4.0",
+      "grunt-contrib-clean": "~0.5.0",
+      "semver": "~2.3.0",
+      "grunt-contrib-compress": "~0.8.0"
   },
   "bugs": {
     "url": "https://github.com/nodeapps/http-server/issues"
